fix spacing

--- a/assets/layouts/blog.scss
+++ b/assets/layouts/blog.scss
@@ -72,7 +72,7 @@ footer {
   margin: 1.5em 0;
 
   & .time {
-    padding-right: 2em;
+    margin: 0;
   }
 
   .singlePost {
@@ -82,7 +82,7 @@ footer {
     justify-content: space-between;
 
     & * {
-      margin: 0.1em auto;
+      margin: 0 auto;
     }
 
     & > .desc {
